--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,23 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
+    Social Media Intern - Fall 2019 at The Marine Mammal Center
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
+    Marine Mammal Rescue and Response Intern - Monterey Bay Operations at The Marine Mammal Center
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oxBDafwF'>TeamViewer Global Careers - Intern (m/f/d) E-Mail-Marketing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -57,7 +69,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -85,7 +97,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=o4vn9fwP&__jvst=Employee+Referral&__jvsd=sMkFeiwM&__jvsc=Twitter&bid=ntAYVLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=o4vn9fwP&__jvst=Employee+Referral&__jvsd=sMkFeiwM&__jvsc=Twitter&bid=ntAYVLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -139,7 +151,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk03f1w/'>
+<h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk03f1w/'>
     Content Coordinator - Internship at LoveCrafts
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -157,7 +169,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/NupbTtsuto/Intern-Family-Planning-2020'>Intern, Family Planning 2020 - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/NupbTtsuto/Intern-Family-Planning-2020'>Intern, Family Planning 2020 - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -165,7 +177,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -189,7 +201,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -221,7 +233,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/astorian/9d9c9363-513f-4abf-b3a8-d049309fa36d'>Astorian - Fall Semester Growth Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/astorian/9d9c9363-513f-4abf-b3a8-d049309fa36d'>Astorian - Fall Semester Growth Intern</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -269,7 +281,7 @@
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/ooZEafwV'>Universal Music Group Careers - Fall Internship, Business & Legal Affairs- Los Angeles</a></h5> 
+<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/ooZEafwV'>Universal Music Group Careers - Fall Internship, Business & Legal Affairs- Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -285,7 +297,7 @@ the?...</p>
 Culture Manager. Documents: .doc, .docx, .pdf, .rtf, .odt, .txt. CV. Other Documents
 .</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12666&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12666&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Description. Reporting to the Assistant Manager, Administration the incumbent 
 will be providing reception coverage including processing telephone calls,?...</p>
@@ -465,14 +477,6 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... SummaryResponsible for conducting research and data analysis for a variety of 
 organizational projects and initiatives.Key ResponsibilitiesAssists in.....</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oCvCafwD'>Eidos Montr?al Careers - Stagiaire en ressources humaines / Human Resources intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/os6Cafw4'>Eidos Montr?al Careers - Stagiaire - Technicien Support Informatique / Intern ? IT Support Technician</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
 <hr/>
 
 
